--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
+    "material-ui": "0.17.1",
     "object-assign": "4.1.0",
-    "react": "15.4.1",
-    "react-dom": "15.4.1",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
+    "react-tap-event-plugin": "2.0.1",
     "redux": "3.6.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
