--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "preinstall": "node tools/nodeVersionCheck.js",
     "setup": "node tools/setup/setupMessage.js && npm install && node tools/setup/setup.js",
-    "remove-demo": "babel-node tools/removeDemo.js",
     "start-message": "babel-node tools/startMessage.js",
     "prestart": "npm-run-all --parallel start-message",
     "start": "npm-run-all --parallel test:watch open:src lint:watch",
@@ -19,7 +18,8 @@
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "rimraf ./dist",
     "prebuild": "npm run clean-dist && npm run lint && npm run test",
-    "build": "babel-node tools/build.js && npm run open:dist",
+    "build:dev": "babel-node tools/build.js && npm run open:dist",
+    "build:prod": "babel-node tools/build.js",
     "test": "jest",
     "test:CI": "babel-node tools/testCi.js",
     "test:cover": "npm run test -- --coverage ",
@@ -31,15 +31,21 @@
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
+    "classnames": "2.2.5",
+    "immutable": "3.8.1",
     "material-ui": "0.17.1",
+    "normalize.css": "6.0.0",
     "object-assign": "4.1.0",
     "react": "15.4.2",
+    "react-addons": "0.9.1-deprecated",
     "react-dom": "15.4.2",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
     "react-tap-event-plugin": "2.0.1",
     "redux": "3.6.0",
+    "redux-form": "6.6.1",
+    "redux-form-material-ui": "4.1.3",
     "redux-thunk": "2.1.0",
     "whatwg-fetch": "2.0.3"
   },
